--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.19",
         "autoprefixer": "^10.4.21",
         "axios": "^1.6.4",
         "flowbite": "^3.1.2",
